--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@antv/data-set": "^0.8.0",
     "@babel/polyfill": "^7.0.0-beta.36",
     "antd": "^3.10.8",
-    "axios": "^0.19.0",
+    "axios": "^0.16.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.7.0",
     "babel-runtime": "^6.9.2",
@@ -44,13 +44,12 @@
     "omit.js": "^1.0.0",
     "path-to-regexp": "^2.1.0",
     "prop-types": "^15.5.10",
-    "puppeteer": "^1.18.1",
     "qs": "^6.5.0",
     "rc-drawer-menu": "^0.5.0",
-    "react": "^16.8.6",
+    "react": "^16.2.0",
     "react-container-query": "^0.9.1",
     "react-document-title": "^2.0.3",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.2.0",
     "react-fittext": "^1.0.0",
     "react-fontawesome": "^1.6.1",
     "rollbar": "^2.3.4",
@@ -90,6 +89,9 @@
     "stylelint": "^8.4.0",
     "stylelint-config-prettier": "^3.0.4",
     "stylelint-config-standard": "^18.0.0"
+  },
+  "optionalDependencies": {
+    "puppeteer": "^1.1.1"
   },
   "lint-staged": {
     "**/*.{js,jsx,less}": [
